board-page.html 모바일 반응형 개선
- responsive.css에 게시판 모바일 스타일 추가
- 카드 형식으로 테이블 변경 및 가독성 향상
- data-label 속성 추가로 모바일 UI 개선
- 외부 CSS 오버라이드 방지를 위한 !important 추가
- grid-system-1450.css에서 중복 스타일 제거

--- a/misopin-cms/package.json
+++ b/misopin-cms/package.json
@@ -11,15 +11,18 @@
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
+    "db:seed": "tsx prisma/seed.ts",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.16.1",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "prisma": "^6.16.1",
@@ -38,6 +41,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "tailwindcss": "^4",
+    "tsx": "^4.20.5",
     "typescript": "^5"
   }
 }
