Fix: 팝업 시스템 근본적 해결 - 캐싱 문제 완전 해결
✨ 주요 변경사항:
- vercel.json: JS 파일 캐시 무효화 설정 (max-age=0)
- index.html: 동적 캐시 버스팅 스크립트 로더 구현
- api-client.js: 강력한 다중 초기화 시스템 구축
  - 3단계 백업 타이머 (즉시, 2초, 5초)
  - 상세한 디버깅 로그 시스템
  - 의존성 검증 및 에러 처리

🛠️ 새로운 기능:
- popup-test-suite.js: 개발 환경 테스트 도구
- deployment-check.js: 프로덕션 검증 시스템
- window.checkPopupSystem(): 실시간 상태 확인

🎯 해결된 문제:
- Vercel CDN 캐싱으로 인한 구버전 JS 파일 제공
- 팝업 초기화 실패 문제
- 디버깅 어려움

📊 검증 방법:
1. 브라우저 콘솔에서 '[Misopin Popup System]' 로그 확인
2. checkPopupSystem() 함수로 상태 확인
3. verifyPopupDeployment() 함수로 전체 검증

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,37 @@
 {
-  "version": 2
+  "version": 2,
+  "headers": [
+    {
+      "source": "/js/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    },
+    {
+      "source": "/css/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600, s-maxage=3600"
+        }
+      ]
+    },
+    {
+      "source": "/(.*\\.(?:html|htm))",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    }
+  ],
+  "functions": {
+    "js/api-client.js": {
+      "maxDuration": 10
+    }
+  }
 }
